Fix: Game Logic Type Refactoring

--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://127.0.0.1:3306/cube_pang"
+DATABASE_URL='mysql://e4esux4xwwijkzzn8vz1:pscale_pw_uMYaArWXOAoAsPyjcpM0oP8hCpUTuohFDyYiMlfEg24@ap-northeast.connect.psdb.cloud/cube_pang?sslaccept=strict'
+
 NEXT_PUBLIC_URL="http://localhost:3000"
