--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "immer": "^9.0.19",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spring": "^9.7.1",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.5",
     "typescript": "4.9.5",
