--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "eslint-config-next": "13.1.6",
     "immer": "^9.0.19",
     "next": "13.1.6",
+    "plaiceholder": "^2.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-spring": "^9.7.1",
+    "sharp": "^0.32.0",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.5",
     "typescript": "4.9.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^7.0.0",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.0",
     "babel-plugin-styled-components": "^2.0.7",
